--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,42 @@
 
     }
 
+    function setComponentListener(model) {
+        let listener = this.listener;
+        //alert(listener);
+        if (h.boolean.isString(listener)) {
+            let listeners = h.str.stringToArrayUsingSplitter(' ', listener);
+            console.log(listeners);
+            listeners.forEach(listener => {
+                let listeners = h.str.stringToArrayUsingSplitter('@', listener);
+                let remoteEvent = listeners[0];
+                let localEvents = listeners.slice(1);
+
+                localEvents.forEach(localEvent => {
+                    events.subscribe(remoteEvent, function(e) {
+                    console.log('catched event');
+                    console.log(model);
+                    model.dispatch(localEvent, e);	
+                });
+                })
+            });
+        }
+        
+    }
+
+    function setComponentDispatcher() {
+        eventPublisher(this.dispatch);
+    }
+
+    function setConnectedCallback() {
+        const model = this.Model();
+        const view = this.View(model);
+        const ctrl = this.Ctrl(model, view);
+        ctrl.register();
+        setComponentListener.call(this, model);
+        setComponentDispatcher.call(this);
+    }
+
 
 
 </script>
@@ -115,18 +151,21 @@
     </info-headline>
 
     <toggle-button slot="b1" toggle="on" effect="display" section="heat" dispatch="newtoggle">TOGGLE HEAT SECTION VISIBILITY</toggle-button>
-    <toggle-button slot="b1" toggle="on" effect="display" section="heat" dispatch="heat-sectiontoggle">TOGGLE HEAT SECTION VISIBILITY</toggle-button>
+    <toggle-button slot="b1" toggle="on" effect="display" section="heat" dispatch="heat-section-toggle">TOGGLE HEAT SECTION VISIBILITY</toggle-button>
 
-    <info-headline slot="h2">
+    <!-- <info-headline slot="h2">
         <h1 slot="text">Edit heat section headline</h1>
+    </info-headline> -->
+    <info-headline listener="newinput@changeheadline" slot="headline" year="1">
+        <h1 slot="text">A Headline</h1>
     </info-headline>
 
-    <info-input dispatch="newinput" slot="i1" value="default" section="heat"></info-input>
+    <info-input dispatch="newinput" slot="i1" value="testvalue" section="heat"></info-input>
 
-    <fancy-section slot="s1" section="heat" listener="newinput@changecolor@inputupdated heat-sectiontoggle@toggleupdated">    
-        <info-headline slot="headline" year="1">
+    <fancy-section slot="s1" section="heat" listener="heat-section-toggle@toggleupdated@changecolor">    
+        <!-- <info-headline listener="newinput@changedheadline" slot="headline" year="1">
             <h1 slot="text">A Headline</h1>
-        </info-headline>
+        </info-headline> -->
         <info-headline slot="headline" year="2">
             <h1 slot="text">A Headline</h1>
         </info-headline>
@@ -137,7 +176,6 @@
             <h1 slot="text">A Headline</h1>
         </info-headline>
 
-        <info-input slot="userinput" section="heat"></info-input>
     </fancy-section>
 
     <info-select slot="select1" selectedindex="1" section="heat"></info-select>
