--- a/public/ce/infoheadline2.html
+++ b/public/ce/infoheadline2.html
@@ -20,14 +20,7 @@
 		super();
 
 		this.shadowRoot.appendChild(template.cloneNode(true));
-		
-		this.eventTarget = this.model.eval("eventTarget");
-		this.extendModel();
-		this.extendCtrl();
-		this.extendView();
-		this.ctrl.register();
-		
-		
+		this.extend();
 		}
 
 		// attributeChangedCallback(name, oldVal, newVal) {
@@ -43,21 +36,21 @@
 		// 	}
 		// }
 
-		extendModel() {
-			let headline = "";
-			let that = this;
 
-			this.model.register = function(...args) {
-				args.forEach(elem => {
-					console.log(elem);
-					that.eventTarget.addEventListener('updatedheadline', elem.updatedHeadline);
-					that.eventTarget.addEventListener('changeheadline', elem.changeHeadline);
-				});
-			};
+		extendModel(that) {
+			let headline = "";
+			// this.model.register = function(...args) {
+			// 	args.forEach(elem => {
+			// 		console.log(elem);
+			// 		that.eventTarget.addEventListener('updatedheadline', elem.updatedHeadline);
+			// 		that.eventTarget.addEventListener('changeheadline', elem.changeHeadline);
+			// 	});
+			// };
 
 			this.model.changeHeadline = function(e) {
+				console.log(that.eventTarget);
 				headline = e.detail.detail.changedAttribute.newVal;
-				return that.model.eval("eventTarget").dispatchEvent(new Event('updatedheadline'));
+				return that.eventTarget.dispatchEvent(new Event('updatedheadline'));
 			};
 
 			this.model.getHeadline = function() {
@@ -65,22 +58,18 @@
 			};
 		}
 
-		extendCtrl() {
-			let that = this;
-
+		extendCtrl(that) {
 			this.ctrl.updatedHeadline = function() {
+				alert('here');
 				return that.view.updatedHeadline();
 			};
 
 			this.ctrl.changeHeadline = function(e) {
 				return that.model.changeHeadline(e);
-			};
-			
+			};	
 		}
 
-		extendView() {
-			let that = this;
-
+		extendView(that) {
 			this.view.getHeadline = function() {
 				return that.model.getHeadline();
 			};
