--- a/public/ce/togglebutton2.html
+++ b/public/ce/togglebutton2.html
@@ -12,12 +12,13 @@
 			height: auto;
 			margin: 5px;
 
-		background-color: lightblue;
-		border-radius: 5px;
+		
+		
 		color: #000;
 		}
-		.info-section-inner {
-
+		button {
+			border-radius: 5px;
+			background-color: var(--main-bg-color, lightblue);
 		}
 	</style>
 	
