--- a/public/ce/togglebutton2.html
+++ b/public/ce/togglebutton2.html
@@ -20,6 +20,12 @@
 			border-radius: 5px;
 			background-color: var(--main-bg-color, lightblue);
 		}
+
+		button:hover {
+			border-radius: 20px;
+			background-color: var(--main-bg-color, lightblue);
+		}
+
 	</style>
 	
 	<div class="info-section">
