--- a/public/ce/infoselect2.html
+++ b/public/ce/infoselect2.html
@@ -35,7 +35,7 @@
 <script>
 (function(window, document, undefined) {
 
-	class InfoSelect2 extends customElement {
+	class InfoSelect2 extends CustomElement {
 
 		constructor() {
 			super();
