--- a/public/ce/input_ce.html
+++ b/public/ce/input_ce.html
@@ -29,7 +29,7 @@
 <script>
 (function(window, document, undefined) {
 	
-	class InfoInput2 extends customElement {
+	class InputCE extends CustomElement {
 		constructor() {
 			super();
 			this.extend();
@@ -61,7 +61,7 @@
 		}
 	}
 
-	window.customElements.define('info-input2', InfoInput2);
+	window.customElements.define('input-ce', InputCE);
 
 
 })(window, document);
