--- a/public/ce/togglebutton2.html
+++ b/public/ce/togglebutton2.html
@@ -38,7 +38,7 @@
 <script>
 (function(window, document, undefined) {
 	
-	class ToggleButton2 extends customElement {
+	class ToggleButton2 extends CustomElement {
 
 		constructor() {
 			super();
