Working - added ccs styles for host and slotted

--- a/public/ce/headline_ce.html
+++ b/public/ce/headline_ce.html
@@ -1,6 +1,9 @@
 <template>
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 	<style>
+		:host-context(.darktheme) {
+			color: green;
+		}
 		
 	</style>
 
