--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 <script>
     function getSlot(name, that) {
 		return that.shadowRoot.querySelector("slot[name=" + name + "]");
@@ -44,7 +44,7 @@
   <link rel="import" href="ce/infoselect2.html">
   <link rel="import" href="ce/togglebutton.html">
   <link rel="import" href="ce/togglebutton_ce.html">
-  <link rel="import" href="ce/fancysection.html">
+  <link rel="import" href="ce/section2_ce.html">
   <link rel="import" href="ce/sectioncontainer.html">
   <link rel="import" href="ce/infosection.html">
   
@@ -59,8 +59,26 @@
 
 <headline-ce dispatch="newheadline" listener="newinput@changeheadline" value="testvalue"></headline-ce>
 <headline-ce listener="newheadline@makeheadlinered newtoggle@blueifon" value="test2"></headline-ce>
-<togglebutton-ce dispatch="newtoggle" style="--main-bg-color: brown" toggle="on" value="TOGGLE HEAT SECTION VISIBILITY"></togglebutton-ce>
+<togglebutton-ce dispatch="newtoggle" toggle="on" value="TOGGLE HEAT SECTION VISIBILITY"></togglebutton-ce>
 
+
+
+<section-ce color="red" name="fire" style="--main-bg-color: lightblue" color="red" class="darktheme">
+        <headline-ce dispatch="newheadline" listener="newinput-fire@changeheadline" value="testvalue" slot="headline"></headline-ce>
+        <input-ce dispatch="newinput-fire" value="hej" placeholder="Enter value..." slot="userinput"></input-ce>
+        <h1>testcolor</h1>
+</section-ce>
+
+
+
+
+<section-ce color="blue">
+    <headline-ce dispatch="newheadline" listener="newinput-fire@changeheadline" value="whatcolor" slot="headline"></headline-ce>
+    <h1 slot="myslot" class="testclass">Eric Bidelman</h1>
+    <span class="title"  data-test="hej">
+        Digital Jedi, <span class="company">Google</span>
+    </span>
+</section-ce>
 
 
 
