--- a/public/ce/headline_ce.html
+++ b/public/ce/headline_ce.html
@@ -15,9 +15,14 @@
 <script>
 (function(window, document, undefined) {
 
+	var thatDoc = document;
+	var thisDoc = (thatDoc._currentScript || thatDoc.currentScript).ownerDocument;
+
 	class HeadlineCE extends CustomElement {
 		constructor() {
 		super();
+		this.thatDoc = thatDoc;
+		this.thisDoc = thisDoc;
 		this.extend();
 		}
 
