--- a/public/ce/section_ce.html
+++ b/public/ce/section_ce.html
@@ -56,6 +56,7 @@
 		extendCtrl(that) {
 			//local
 			this.ctrl.run = function() {
+				console.log('Xhere');
 			};
 
 			//global
@@ -65,6 +66,10 @@
 
 		extendModel(that) {
 			
+		}
+
+		connectedCallback() {
+			this.connectedCallback();
 		}
 	}
 
